--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-test-utils": "15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.0",
+    "react-router-dom": "^4.2.2",
     "react-static-container": "^1.0.1",
     "react-transform-catch-errors": "^1.0.2",
     "style-loader": "^0.13.1",
